@@ -11,7 +11,7 @@ namespace PloppableRICO
 	/// Doing it this way (as opposed to the previous approach of changing prefab settings after initialization) solves a whole lot of issues,
 	/// and opens a lot of doors.
 	/// </summary>
-	[HarmonyPatch(typeof(BuildingInfo), "InitializePrefab")]
+	//[HarmonyPatch(typeof(BuildingInfo), "InitializePrefab")]
 	internal static class InitPatch
 	{
 		/// <summary>
@@ -178,6 +178,9 @@ namespace PloppableRICO
 				// This means that there's been a significant failure.  Ploppable RICO settings can't be applied.
 				Debug.Log("RICO Revisited: convertPrefabs not initialised!");
 			}
+
+			// If we've made it this far, the patch is working fine - set the watchdog flag to confirm.
+			Loading.patchOperating = true;
 
 			// Continue on to execute game InitializePrefab.
 			return true;
