@@ -77,6 +77,7 @@
     <Compile Include="ModUtils.cs" />
     <Compile Include="Notifications\ConflictNotification.cs" />
     <Compile Include="Notifications\ErrorNotification.cs" />
+    <Compile Include="Notifications\HarmonyNotification.cs" />
     <Compile Include="Patches\BuildingLoaded.cs" />
     <Compile Include="Patches\MonumentsPatch.cs" />
     <Compile Include="Patches\RealisticCitizenUnits.cs" />
