@@ -1,4 +1,5 @@
-﻿- Add mod compatibility check for old Painter mod
+﻿- Add check to ensure that InitPrefab patch has applied and operated
+- Add mod compatibility check for old Painter mod
 - Streamlined notification messaging
 
 
